--- a/simple-clock/components/simple-calendar.html
+++ b/simple-clock/components/simple-calendar.html
@@ -3,9 +3,11 @@
         .aside {
             margin: 0 auto;
             padding: 0;
-            width: 25%;
+            width: 600px;
             height: 100px;
-            background: blue;
+            background: lightblue;
+            margin-top: 10px;
+            border: 1px solid blue;
             color: white;
         }
 
@@ -29,7 +31,7 @@
         }
     </style>
     <div class="aside">
-        <div class="calendar" date="01:01:2017">01:01:2017</div>
+        <div class="calendar" date="01.01.2017">01.01.2017</div>
     </div>
 </template>
 <script>
